# COINALERTPROJECT

./: .gitignore  README.md  binance_ticker_price_client.py  coin_alert.py  mail_agent.py  pyproject.toml
BinanceETL/: build.sbt
BinanceETL/project/: Dependencies.scala
BinanceETL/src/main/scala/: Main.scala
