[tool.poetry]
name = "CoinAlert"
version = "0.1.0"
description = ""
authors = ["Ante Teskera <ante.teskera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9"
python-decouple = "^3.6"
requests = "^2.31"
tabulate = "0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

